Adding depedency injection with tsysinge
